--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,23 @@
-pandas
-python-dotenv
+# --- Core for Zotero tagging pipeline ---
+pandas>=2.2
+python-dotenv>=1.0
+pyzotero>=1.5.11
+requests>=2.32
+tqdm>=4.66
+
+# --- PDF extraction and text cleaning dependencies ---
+PyMuPDF>=1.24.9          # provides fitz (core PDF parser)
+regex>=2024.5.15         # better regex engine for section splitting
+Unidecode>=1.3.8         # normalize ligatures like “ﬁ” → “fi”
+
+# Optional (only if you plan to extract tables)
+camelot-py[cv]>=0.11.0   # for ruled tables (requires Ghostscript)
+tabula-py>=2.9.0         # for stream-style tables (requires Java)
+
+# --- HTML snapshot extraction (prioritize HTML over PDF) ---
+trafilatura>=1.8.0        # robust boilerplate removal from HTML
+beautifulsoup4>=4.12.3    # fallback HTML parsing
+lxml>=5.3.0               # parser backend for bs4/trafilatura
+
+# --- LLM (keep your version) ---
 google-generativeai>=0.7.0
